<resources>
    <string name="app_name">AppHospital</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar o registarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"¡ Bienvenido !"</string>
    <string name="invalid_username">Nombre de usuario no es valido</string>
    <string name="invalid_password">La clave debe ser >5 caracteres</string>
    <string name="login_failed">"Error de inicio de sesion"</string>
    <string name="title_activity_ubicacion_actual">Map</string>
    <string name="mateo_herrada_herrera">Mateo Herrada Herrera</string>
    <string name="diana_marcela_barco_castrill_n">Diana Marcela Barco Castrillón</string>
    <string name="todo">TODO</string>
    <string name="elija_un_hospital">Elija un hospital:</string>
    <string name="creditos">Creditos</string>
    <string name="ingrese_sus_datos_personales">Ingrese sus datos personales:</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="numero_de_documento">Numero de documento</string>
    <string name="direcci_n_de_su_residencia">Dirección de su residencia</string>
    <string name="edad">Edad</string>
    <string name="tipo_de_documento">Tipo de documento:</string>
    <string name="tarjeta_de_identidad">Tarjeta de identidad</string>
    <string name="cedula_de_ciudadania">Cedula de ciudadania</string>
    <string name="registrar">Registrar</string>
    <string name="continuar">Continuar</string>
    <string name="informaci_n_sobre_el_hospital">Información sobre el hospital:</string>
    <string name="nombre_hospital">Nombre hospital</string>
    <string name="codigo_hospital">Codigo hospital</string>
    <string name="direccion_hospital">Direccion hospital</string>
    <string name="eps">Eps</string>
    <string name="telefono">Telefono</string>
    <string name="posible_covid_19">Posible Covid-19</string>
    <string name="si_presentas_s_ntomas_graves_busca_atenci_n_m_dica_inmediata_sin_embargo_siempre_debes_llamar_a_tu_doctor_o_centro_de_atenci_n_sanitaria_antes_de_presentarte_en_el_lugar_en_cuesti_n">Si presentas síntomas graves, busca atención médica inmediata. Sin embargo, siempre debes llamar a tu doctor o centro de atención sanitaria antes de presentarte en el lugar en cuestión.</string>
    <string name="salir">Salir</string>
    <string name="qu_servicio_necesita">¿Qué servicio necesita?</string>
    <string name="covid_19">Covid-19</string>
    <string name="servicios_del_hospital">Servicios del hospital</string>
    <string name="informaci_n_del_hospital">Información del hospital</string>
    <string name="los_servicios_que_ofrece_el_hospital_son">Los servicios que ofrece el hospital son:</string>
    <string name="sin_posible_covid_19">Sin posible Covid-19</string>
    <string name="no_es_necesario_que_asista_al_hospital_sin_embargo_si_sus_sintomas_cambian_o_empeoran_debe_volver_a_consultar_o_llamar_a_su_doctor_o_centro_de_atenci_n_sanitaria_antes_de_presentarte_en_el_lugar_en_cuesti_n">No es necesario que asista al hospital. Sin embargo, si sus sintomas cambian o empeoran debe volver a consultar o llamar a su doctor o centro de atención sanitaria antes de presentarte en el lugar en cuestión.</string>
    <string name="cuales_de_los_siguientes_sintomas_presenta">¿Cuales de los siguientes sintomas presenta?</string>
    <string name="puede_elegir_varias_opciones">(Puede elegir varias opciones)</string>
    <string name="cansancio">Cansancio</string>
    <string name="congestion_nasal">Congestion nasal</string>
    <string name="dolor_de_garganta">Dolor de garganta</string>
    <string name="fiebre">Fiebre</string>
    <string name="gripa">Gripa</string>
    <string name="tos_seca">Tos seca</string>
    <string name="hace_cu_nto_tiempo_presenta_los_sintomas">¿Hace cuánto tiempo presenta los sintomas?</string>
    <string name="solo_puede_elegir_una_opci_n">(Solo puede elegir una opción)</string>
    <string name="_5_d_as">5 días</string>
    <string name="_1_semana">1 semana</string>
    <string name="_2_semanas">2 semanas</string>
    <string name="_3_semanas">3 semanas</string>
    <string name="otro">Otro</string>
    <string name="image">image</string>
    <string name="_1continuar">1continuar</string>
    <string name="serofreccontinuar">SerOfrecContinuar</string>
    <string name="cansancio1">Cansancio</string>
</resources>
