<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_3_39"
    tools:context=".SintomasCovid">

    <ImageButton
        android:id="@+id/inicioSintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/inicio_7"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="168dp"
        android:layout_height="81dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logo_transparente_4_size"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="647dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuales_de_los_siguientes_sintomas_presenta"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:text="@string/puede_elegir_varias_opciones"
            android:textAlignment="center"
            tools:ignore="HardcodedText"/>

        <CheckBox
            android:id="@+id/cansancio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cansancio1"
            tools:ignore="HardcodedText"/>

        <CheckBox
            android:id="@+id/congestionNasal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congestion_nasal" />

        <CheckBox
            android:id="@+id/dolorGarganta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dolor_de_garganta" />

        <CheckBox
            android:id="@+id/fiebre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiebre" />

        <CheckBox
            android:id="@+id/gripa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gripa" />

        <CheckBox
            android:id="@+id/tosSeca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tos_seca" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="105dp" />

        <Button
            android:id="@+id/continuarTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#90D9E4"
            android:text="@string/continuar"
            android:textColor="#2B40B4"
            android:textSize="18sp"
            tools:ignore="HardcodedText"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>