<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_3_39"
    tools:context=".InformacionHospital">

    <ImageButton
        android:id="@+id/inicioInfoHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/inicio_7"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@mipmap/logo_transparente_4_size"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="645dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/informaci_n_sobre_el_hospital"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText"/>

        <EditText
            android:id="@+id/nombreHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nombre_hospital"
            android:importantForAutofill="no"
            tools:ignore="DuplicateIds,HardcodedText,LabelFor"/>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/codigoHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/codigo_hospital"
            android:autofillHints=""
            tools:ignore="DuplicateIds,HardcodedText,LabelFor"/>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/epsHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/eps"
            android:autofillHints=""
            tools:ignore="DuplicateIds,HardcodedText,LabelFor"/>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/telefonoHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/telefono"
            android:autofillHints=""
            tools:ignore="DuplicateIds,HardcodedText,LabelFor"/>

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/direccionHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/direccion_hospital"
            android:autofillHints=""
            tools:ignore="DuplicateIds,HardcodedText,LabelFor"/>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <Button
            android:id="@+id/continuarInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#90D9E4"
            android:contentDescription="@string/_1continuar"
            android:text="@string/continuar"
            android:textColor="#2B40B4"
            android:textSize="18sp"
            tools:text="@string/continuar"
            tools:ignore="HardcodedText"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>