<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_3_39"
    tools:context=".PosibleCovid">

    <ImageButton
        android:id="@+id/inicioPosibleCovid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/inicio_7"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@mipmap/logo_transparente_4_size"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="646dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/advertencia_1"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/posible_covid_19"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:text="@string/si_presentas_s_ntomas_graves_busca_atenci_n_m_dica_inmediata_sin_embargo_siempre_debes_llamar_a_tu_doctor_o_centro_de_atenci_n_sanitaria_antes_de_presentarte_en_el_lugar_en_cuesti_n"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/continuarPosibleCovid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#90D9E4"
            android:text="@string/continuar"
            android:textColor="#2B40B4"
            android:textSize="18sp"
            tools:ignore="HardcodedText"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>